--- a/public/app/views/home.html
+++ b/public/app/views/home.html
@@ -1,1 +1,1 @@
-<h2 class="col-lg-3 col-md-3 col-lg-offset-1 col-md-offset-1"> Hello World 2.0</h2>
+<h2 class="col-lg-3 col-md-3 col-lg-offset-1 col-md-offset-1"> Hello World 2.0 !</h2>
